--- a/docker/web/default.conf
+++ b/docker/web/default.conf
@@ -1,14 +1,14 @@
 server {
     listen 80;
 
-    root  /var/www/html;
+    root  /var/www/html/public/;
     index index.php index.html index.htm;
 
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?__uri=$uri&$args;
     }
 
     location ~ \.php$ {
